cmake_minimum_required(VERSION 3.9)
project(labofziv)

set(CMAKE_CXX_STANDARD 11)

#
file(GLOB_RECURSE files RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/newcoder-*")
foreach(file IN LISTS files)
    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/file)
        message(file)
        get_filename_component(bin_name ${file} NAME_WE)
        add_executable("dir-${bin_name}" ${file}/main.cpp)
    endif()
endforeach()

file(GLOB FILES "${CMAKE_CURRENT_SOURCE_DIR}/leetcode-cn-cpp/leetcode-cn*")
foreach(file ${FILES})
    if(IS_DIRECTORY ${file})
        if(EXISTS ${file}/CMakeLists.txt )
            add_subdirectory(${file})
        elseif(EXISTS ${file}/main.cpp)
            string(REGEX REPLACE /.*\\/leetcode-cn.*/ "" filename ${file})
            add_executable(${filename}.main.bin ${file}/main.cpp)
        endif()
    elseif(${file} MATCHES /.*\\/leetcode-cn.*cpp/)
        string(REGEX REPLACE /.*\\/leetcode-cn.*cpp/ "" filename ${file})
        add_executable(${filename}.bin ${file})
    endif()

endforeach()

add_subdirectory(AVL)
add_subdirectory(Graph)
add_subdirectory(KMP)
add_subdirectory(Trie)
add_subdirectory(UnionFindSet)