
file(GLOB subdir RELATIVE ${CMAKE_SOURCE_DIR}/leetcode-cn-cpp  ${CMAKE_SOURCE_DIR}/leetcode-cn-cpp/leetcode-cn-*)
foreach (dir ${subdir})
    set(abs_dir ${CMAKE_SOURCE_DIR}/leetcode-cn-cpp/${dir})
    message("abs_dir is ${abs_dir}")
    if (IS_DIRECTORY ${abs_dir})
        add_executable(${dir} ${abs_dir}/main.cpp)
    endif ()
endforeach ()

file(GLOB source_files RELATIVE ${CMAKE_SOURCE_DIR}/leetcode-cn-cpp ${CMAKE_SOURCE_DIR}/leetcode-cn-cpp/leetcode-cn-*.cpp)
foreach (source_file ${source_files})
    set(abs_source_file ${CMAKE_SOURCE_DIR}/leetcode-cn-cpp/${source_file})
    message("abs_source_file is ${abs_source_file}")
    if (IS_ABSOLUTE ${abs_source_file})
        get_filename_component(name ${abs_source_file} NAME_WE ABSOLUTE)
#        message("${abs_source_file} IS_ABSOLUTE, name is ${name}")
        add_executable(${name} ${abs_source_file})
    endif ()
endforeach ()